[project]
name = "mcp-server-ipinfo"
version = "0.3.0"
description = "IP Geolocation Server for MCP"
readme = "README.md"
license = { file = "LICENSE" }

authors = [
    { name = "Brian Connelly", email = "bdc@bconnelly.net" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Networking",
]

requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.9.0",
    "ipinfo>=5.4.0",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Repository = "https://github.com/briandconnelly/mcp-server-ipinfo.git"
Issues = "https://github.com/briandconnelly/mcp-server-ipinfo/issues"

[project.scripts]
mcp-server-ipinfo = "mcp_server_ipinfo.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
